objects/Month_Rep_Target__c.object
<CustomObject>
    <description>SBE: EH Only - Part of the custom AOP reporting package developed by GSP from the UK. One of several custom objects this object is used to store each sales person&apos;s monthly base &amp; stretch quotas and then compare against their current sales funnel</description>
    <label>Month Rep Target</label>
    <nameField>
        <displayFormat>MRT - {00000}</displayFormat>
        <label>Month Rep Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Rep Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MRT__c</fullName>
        <formula>Sales_Person__r.FirstName &amp;
&quot; &quot; &amp;
 Sales_Person__r.LastName &amp;
&quot;-&quot; &amp;
TEXT(Year__c) &amp;
&quot;-&quot; &amp;
RIGHT(TEXT(Month__c),3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Jan</fullName>
                </value>
                <value>
                    <fullName>02-Feb</fullName>
                </value>
                <value>
                    <fullName>03-Mar</fullName>
                </value>
                <value>
                    <fullName>04-Apr</fullName>
                </value>
                <value>
                    <fullName>05-May</fullName>
                </value>
                <value>
                    <fullName>06-Jun</fullName>
                </value>
                <value>
                    <fullName>07-Jul</fullName>
                </value>
                <value>
                    <fullName>08-Aug</fullName>
                </value>
                <value>
                    <fullName>09-Sep</fullName>
                </value>
                <value>
                    <fullName>10-Oct</fullName>
                </value>
                <value>
                    <fullName>11-Nov</fullName>
                </value>
                <value>
                    <fullName>12-Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>int_Month__c</fullName>
        <formula>TRIM(LEFT(TEXT(Month__c), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>int_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Amount of Closed Won opportunities for this rep for this month.</inlineHelpText>
        <label>Won Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Month_Rep_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <externalId>true</externalId>
        <label>Unique Field</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Commit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Amount of all Open opportunities for this rep due to close this month.</inlineHelpText>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Target__c</fullName>
        <label>Stretch Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Win_Rate__c</fullName>
        <formula>IF(( Closed_Won_Opportunities__c = 0), 0, ( Won_Revenue__c / ( Won_Revenue__c + Closed_Lost_Amount__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Dollar Win Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Amount of Closed Lost opportunities for this rep this month.</inlineHelpText>
        <label>Closed Lost Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Revenue_Stretch__c</fullName>
        <formula>Won_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won opportunities for this rep for this month</inlineHelpText>
        <label>Won Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Target_Achieved__c</fullName>
        <formula>IF(  Total_Opportunity_Amount__c  = 0, 0, Won_Revenue__c / Base_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won opportunities compared to Base Target for this rep this month</inlineHelpText>
        <label>Base Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commit_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Commit Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commit_Amount_Stretch__c</fullName>
        <formula>Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of all Open opportunities for this rep due to close this month</inlineHelpText>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Pipeline Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Revenue__c</fullName>
        <formula>Won_Revenue__c +   Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won and Commit opportunities for this rep this month.</inlineHelpText>
        <label>Total Forecast Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Achieved__c</fullName>
        <formula>IF( Total_Opportunity_Amount__c = 0, 0, Won_Revenue__c / Stretch_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won opportunities compared to Stretched Target for this rep this month</inlineHelpText>
        <label>Stretch Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commit_as_of_Base_Target__c</fullName>
        <formula>IF(( Total_Opportunity_Amount__c = 0), 0, (Commit_Amount__c / Base_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Commit opportunities compared to Base Target for this rep this month</inlineHelpText>
        <label>Commit as % of Base Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Amount__c</fullName>
        <formula>Won_Revenue__c +  Commit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Closed Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Amount_Stretch__c</fullName>
        <formula>Closed_Lost_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Lost opportunities for this rep this month</inlineHelpText>
        <label>Closed Lost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count_Win_Rate__c</fullName>
        <formula>IF(( Closed_Won_Opportunities__c = 0), 0, ( Closed_Won_Opportunities__c / ( Closed_Won_Opportunities__c + Closed_Lost_Opportunities__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Opportunity Count Win Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Target_Variance_Amount__c</fullName>
        <formula>Won_Revenue__c  - Base_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Target Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_as_of_Stretch_Target__c</fullName>
        <formula>IF(( Total_Opportunity_Amount__c = 0), 0, (Commit_Amount__c / Stretch_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Commit opportunities compared to Stretch Target for this rep this month</inlineHelpText>
        <label>Commit as % of Stretch Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stretch_Target_Variance_Amount__c</fullName>
        <formula>Won_Revenue_Stretch__c  - Stretch_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stretch Target Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Forecast_Revenue_Stretch__c</fullName>
        <formula>Total_Forecast_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won and Commit opportunities for this rep this month</inlineHelpText>
        <label>Total Forecast Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Base_Target_Achievement__c</fullName>
        <formula>IF (Total_Opportunity_Amount__c = 0, 0, (  Total_Forecast_Revenue__c  / Base_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won and Commit opportunities compared to Base Target for this rep this month</inlineHelpText>
        <label>Forecast Base Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_Stretch_Target_Achievement__c</fullName>
        <formula>IF (Total_Opportunity_Amount__c = 0, 0, (  Total_Forecast_Revenue__c  / Stretch_Target__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of Closed Won and Commit opportunities compared to Stretch Target for this rep this month</inlineHelpText>
        <label>Forecast Stretch Target Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>